<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_help"
        android:title="@string/outfit_suggestion"
        android:icon="@drawable/baseline_face_white_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_add"
        android:title="@string/addoutfit"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"/>


    <item android:id="@+id/remove"
        android:title="@string/removeoutfit"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/background"
        android:title="@string/chg_bacground"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/touch_mode"
        android:title="@string/change_touch_mode"
        app:showAsAction="never"
        />

</menu>
