<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>
    <!--android:icon="@drawable/ic_message_white_48dp"-->

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v4.widget.SearchView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Support"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        />

</menu>
