<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#25515151">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="Privacy Policy"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_privacy"/>


      <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/privacy_contents"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/privacy_text1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Information Collection and Use"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/privacy_text2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Log Data"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/privacy_text3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cookies"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/page_text4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Service Providers"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/privacy_text5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Security"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/page_text6"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Links to Other Sites"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/page_text7"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Children’s Privacy"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/page_text8"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Changes to This Privacy Policy"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/page_text9"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Us"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/contact_us"/>

            </LinearLayout>
        </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="Terms &amp; Policy"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_terms"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/terms_contents"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/terms_text1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Changes to This Terms and Conditions"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/terms_text2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact Us"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/terms_contactus"/>


            </LinearLayout>

        </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/accept_layout"
        android:visibility="gone">

        <Button
            android:id="@+id/accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_boarder"
            android:layout_alignParentBottom="true"
            android:text="Accept"
            />

    </RelativeLayout>

</LinearLayout>