<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Verify Your Current Location"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0.00"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/latitude_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_text"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/longitude_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_text"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <TextView
            android:id="@+id/city_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@android:drawable/ic_menu_mylocation"
            />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_text"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refresh"
        android:drawableLeft="@android:drawable/ic_menu_rotate"
        android:drawableStart="@android:drawable/ic_menu_rotate"
        android:background="@drawable/button_boarder"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:id="@+id/refresh"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_boarder"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:text="Confirm "
            android:padding="5dp"
            android:id="@+id/confirm"/>
</LinearLayout>

</LinearLayout>